Fixed issue #2944: mint idea-Template: Public Survey page layout problem
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey@6836 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/templates/mint_idea/template.css
+++ b/templates/mint_idea/template.css
@@ -16,6 +16,7 @@ table
 a {color:#fff;}
 a:link {color:#fff;}
 a:hover {color:#fff; text-decoration: none;}
+a:visited {color:#fff; text-decoration: none;}         
 
 /* headings --------------------------------------------------------------------- */
 h1, h2, h3, h4, h5, h6 { margin:15px 0 10px 0; }
